<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>info.boaventura</groupId>
  <artifactId>javascan</artifactId>
  <packaging>jar</packaging>
  <version>1.2.0-SNAPSHOT</version>

  <properties>
    <java.version>22</java.version>
    <spring-shell.version>3.4.0</spring-shell.version>
    <spring-boot.version>6.2.0</spring-boot.version>
    <spring-boot-starter.version>3.4.1</spring-boot-starter.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <izpack.version>5.2.3</izpack.version>
    <izpack.staging>${project.build.directory}/staging</izpack.staging>
  </properties>

  <name>javascan</name>
  <url>https://javascan.github.io</url>

  <scm>
    <developerConnection>scm:git:https://github.com/valtoni/javascan</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.shell</groupId>
        <artifactId>spring-shell-dependencies</artifactId>
        <version>${spring-shell.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-framework-bom</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.11.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>


  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
      <version>${spring-boot-starter.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-log4j2</artifactId>
      <version>${spring-boot-starter.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.shell</groupId>
      <artifactId>spring-shell-starter</artifactId>
      <version>${spring-shell.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate.validator</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>9.0.0.Beta3</version>
    </dependency>


    <!-- Spring bioma -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context-support</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-aop</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-beans</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-expression</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-tx</artifactId>
    </dependency>
    <dependency>
      <groupId>net.objecthunter</groupId>
      <artifactId>exp4j</artifactId>
      <version>0.4.8</version>
    </dependency>

    <!-- New Juniper -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.9.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>5.9.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <version>${spring-boot-starter.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.0</version>
        <configuration>
          <!-- https://openjdk.org/jeps/451 -->
          <argLine>-Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>${java.version}</release>
          <!-- https://issues.apache.org/jira/browse/MCOMPILER-548 -->
          <compilerArgs>
            <arg>-proc:full</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <useUniqueVersions>false</useUniqueVersions>
              <classpathPrefix>lib/</classpathPrefix>
              <mainClass>info.boaventura.scan.JavaScanResources</mainClass>
            </manifest>
            <manifestEntries>
              <version>${project.version}</version>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <outputDirectory>${izpack.staging}</outputDirectory>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <manifestEntries>
                    <Main-Class>info.boaventura.scan.JavaScanResources</Main-Class>
                    <Build-Number>${project.version}</Build-Number>
                  </manifestEntries>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                  <resource>META-INF/spring.handlers</resource>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                  <resource>META-INF/spring.schemas</resource>
                </transformer>
              </transformers>
              <filters>
                <filter>
                  <artifact>junit:junit</artifact>
                  <includes>
                    <include>junit/framework/**</include>
                    <include>org/junit/**</include>
                  </includes>
                  <excludes>
                    <exclude>org/junit/experimental/**</exclude>
                    <exclude>org/junit/runners/**</exclude>
                  </excludes>
                </filter>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Executable -->
      <plugin>
        <groupId>com.akathist.maven.plugins.launch4j</groupId>
        <artifactId>launch4j-maven-plugin</artifactId>
        <version>2.5.2</version>
        <executions>
          <execution>
            <id>l4j-clui</id>
            <phase>verify</phase>
            <goals>
              <goal>launch4j</goal>
            </goals>
            <configuration>
              <headerType>console</headerType>
              <outfile>${izpack.staging}/${project.artifactId}.exe</outfile>
              <jar>${project.build.directory}/${project.build.finalName}.${project.packaging}</jar>
              <errTitle>${project.name}</errTitle>
              <classPath>
                <mainClass>info.boaventura.scan.JavaScanResources</mainClass>
                <addDependencies>false</addDependencies>
                <preCp>anything</preCp>
              </classPath>
              <jre>
                <minVersion>1.8.0</minVersion>
                <opts>
                  <opt>-Djava.endorsed.dirs=./endorsed</opt>
                </opts>
              </jre>
              <versionInfo>
                <fileVersion>1.0.0.0</fileVersion>
                <txtFileVersion>1.0.0.0</txtFileVersion>
                <fileDescription>Console to search over a jar files</fileDescription>
                <copyright>GNU</copyright>
                <productVersion>1.0.0.0</productVersion>
                <txtProductVersion>1.0.0.0</txtProductVersion>
                <productName>Java Scan</productName>
                <internalName>javascan</internalName>
                <originalFilename>${project.build.finalName}.exe</originalFilename>
              </versionInfo>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Installer IzPack -->
      <plugin>
        <groupId>org.codehaus.izpack</groupId>
        <artifactId>izpack-maven-plugin</artifactId>
        <version>${izpack.version}</version>
        <executions>
          <execution>
            <id>izpack-create-setup</id>
            <phase>verify</phase>
            <goals>
              <goal>izpack</goal>
            </goals>
            <configuration>
              <!-- base for relative paths in izpack descriptor -->
              <baseDir>${izpack.staging}</baseDir>
              <installFile>${basedir}/src/izpack/install.xml</installFile>
            </configuration>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.codehaus.izpack</groupId>
            <artifactId>izpack-panel</artifactId>
            <version>${izpack.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

</project>
